cmake_minimum_required(VERSION 3.9)
project(ClassRoster)

set(CMAKE_CXX_STANDARD 11)

add_executable(ClassRoster main.cpp cmake-build-debug/degree.h cmake-build-debug/CMakeFiles/student.cpp cmake-build-debug/CMakeFiles/student.h cmake-build-debug/student.cpp cmake-build-debug/student.h degree.h student.cpp student.h networkStudent.cpp networkStudent.h securityStudent.cpp securityStudent.h softwareStudent.cpp softwareStudent.h roster.cpp roster.h)